# ogaGPT

./: docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
backend/: README.md  alembic.ini  db.py  main.py  manuals.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d387f8b5573f_create_queries_table.py
backend/models/: schema.py
frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/components/: ChatMessage.vue  ManualCard.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/server/api/: chat.ts
