[project]
name = "ogaGPT"
version = "1.0.0"
description = "社内問い合わせチャットボット"
dependencies = [
    "fastapi",
    "uvicorn",
    "sentence-transformers",
    "scikit-learn",
    "numpy",
    "janome",
    "pymysql",
    "alembic",
    "sqlmodel",
    "mariadb"
]

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true
select = ["ALL"]
ignore = ["D", "ANN101", "ANN102", "PGH003"]
exclude = ["__pycache__", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
